<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/locationFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationFragmentMain">


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green_light"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/clinic_icon"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:layout_marginTop="84dp"
            android:importantForAccessibility="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icons8_clinic_96" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/submit_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="251dp"
            android:layout_height="70dp"
            android:layout_marginBottom="176dp"
            android:text="@string/submit"
            app:cornerRadius="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="@color/green_light" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:fontFamily="@font/molengo"
            android:text="@string/location"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clinic_icon"
            app:layout_constraintVertical_bias="0.406" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="180dp"
            android:fontFamily="@font/molengo"
            android:text="@string/kindly_enter_your_location"
            app:layout_constraintBottom_toTopOf="@+id/submit_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_location"


            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:layout_constraintBottom_toTopOf="@+id/submit_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="61dp"

                />


        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>